# django_app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
django_app/: settings.py  urls.py
fixtures/: cat.json  menu.json
treemenu/: admin.py  models.py  urls.py  views.py
treemenu/migrations/: 0001_initial.py
treemenu/templates/: menu.html  style.css
treemenu/templatetags/: __init__.py  menu_tags.py
